--- a/style.css
+++ b/style.css
@@ -1,13 +1,27 @@
 *{
     background: #f3f5fc;
-    font-family: 'Inter ';
+    font-family: 'Unbounded';
     font-style: normal;
     font-weight: 400;
     font-size: 32px;
     line-height: 150%;
 }
+.header-titulo {
+    width: 40px;
+    text-align: left;
+    font-family: 'Unbounded';
+    font-weight: 400px;
+    color: #0a3871;
+}
 
 .logo {
+    width: 50px;
+    height: 50px;
+    margin-top: 20px;
+    margin-left: 35px;
+}
+
+.logo-a {
     padding-top: 10px;
     margin-left: 10px;
     width: 2%;
