--- a/style.css
+++ b/style.css
@@ -10,16 +10,17 @@
     width: 40px;
     text-align: left;
     font-family: 'Unbounded';
-    font-weight: 400px;
-    color: #0a3871;
+    font-weight: 800px;
+    color: #923234;
 }
 
-.logo {
+.logo-a {
     width: 50px;
     height: 50px;
     margin-top: 20px;
     margin-left: 35px;
 }
+
 .logo-a {
     padding-top: 10px;
     margin-left: 10px;
@@ -32,27 +33,28 @@ main {
     margin-left: 80px;
 }
 
-.text-area {
+.texto {
+    background-color: transparent;
     border: none;
     color: #0a3871;
     margin-top: 90px;
     text-transform: lowercase;
 }
-::placeholder { color: #0a3871; }
-  .text-area:focus {
+::placeholder { color: #212fc3; }
+  .texto:focus {
       outline: none;
   }
 
 .mensaje{
+    background-color: transparent;
     background: white;
-    background-image: url(/imagenes/High\ quality\ products\ 1\ 1.png);
     background-repeat: no-repeat;
     border: none;
-    border-radius: 24px;
+    border-radius: 20px;
     color: #0a3871;
-    margin-left: 98px;
-    margin-top: 20px;
-    padding-left: 20px;
+    margin-left: 70px;
+    margin-top: 10px;
+    padding-left: 5px;
     position: fixed;
 }
 .mensaje:focus {
@@ -73,6 +75,10 @@ main {
     height: 67px;
     width: 328px;
 }
+.btn-encriptar:hover {
+    background: rgb(30, 151, 207);
+    transform: scale(0.9);
+}
 
 .btn-desencriptar {
     background-color: #0a3871;
@@ -84,20 +90,31 @@ main {
     margin-left: 30px;
     width: 328px;
 }
-
+.btn-desencriptar:hover {
+    background: rgb(30, 151, 207);
+    transform: scale(0.9);
+}
 .copiar {
-    border: 1px solid #0a3871;
-    border-radius: 24px;
+    border: 2px solid #0a3871;
+    border-radius: 10px;
     color: #0a3871;
     cursor: pointer;
-    height: 67px;
-    margin-left: 108px;
-    margin-top: 402px;
+    height: 65px;
+    margin-left: 95px;
+    margin-top: 400px;
     position: absolute;
-    width: 336px;
+    width: 290px;
+    background: #0a3871;
+    color: white;
+    transition: all 0.3s ease-in-out;
 }
 
-.informacion {
+.copiar:hover {
+    background: rgb(30, 151, 207);
+    transform: scale(0.9);
+}
+
+.advertencia {
     color: #495057;
-    font-size: 18px;
+    font-size: 15px;
 }
