--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 * {
     background: #E5E5E5;
-
-    font-family: 'Inter';
+    font-family: 'Mortal Kombat 1', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 32px;
@@ -25,7 +24,7 @@ main{
 ::placeholder { color: saddlebrown; }
     .ingresetexto:focus{
         outline: none;
-    }
+}
 .mensaje{
     background: white transparent;
     background-image: url(/imagenes/High\ quality\ products\ 1\ 1.png) transparent ;
@@ -35,6 +34,13 @@ main{
     margin-top: 20px;
     padding-left: 20px;
     position: fixed;
+}
+h6{
+    padding-left: 10px;
+}
+.eliminar img{
+    padding-bottom: ;
+    
 }
 .mensaje:focus {
     outline: none;
@@ -70,7 +76,7 @@ main{
     border-radius: 24px;
     cursor: pointer;
     height: 50px;
-    margin-left: 190px;
+    margin-left: 165px;
     margin-top: 420px;
     position: absolute;
     width: 250px;
