--- a/style.css
+++ b/style.css
@@ -1,83 +1,223 @@
 * {
-    background: #E5E5E5;
+    background-color: rgb(0, 0, 0);
     font-family: 'Mortal Kombat 1', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 32px;
     line-height: 150%;
 }
-.logo-a{
-    padding-top: 10px;
-    margin-left: 10px;
-    width: 2%;
+.header{
+    padding: 15px;
+    margin: 5px;
+    background-color: #413fd4;
+}
+h1{
+    position: relative;
+    font-size: 6em;
+    color: rgb(217, 5, 111);
+    font-family: 'Mortal Kombat 1', sans-serif;
 }
 main{
     display: flex;
-    margin-bottom: 50px;
-    margin-left: 80px;
+    margin-bottom: 20px;
+    margin-left: 20px;
 }
 .ingresetexto{
-    border: none;
-    margin-top: 90px;
+    text-align: justify;
+    text-align: center;
+    display: flex;
+    padding: 10px;
+    margin: 20px;
+    margin-left: 100px;
     text-transform: lowercase;
+    color: rgb(217, 5, 111);
+    min-width: 500px;
+    max-width: 500px;
+    min-height: 200px;
+    max-height: 600px;
+    border-radius: 60px;
+    border-color: #7113ec;
+    border-style: double;
+    background-color: (0,0,0,0, 0.1);
 }
-::placeholder { color: saddlebrown; }
+::placeholder { color: rgb(139, 19, 83); }
     .ingresetexto:focus{
         outline: none;
+
 }
 .mensaje{
+    display:flex;
+    margin-left: 650px;
+    margin-right: 100%;
+    margin-top: 10px;
+    padding: 20px;
     background: white transparent;
     background-image: url(/imagenes/High\ quality\ products\ 1\ 1.png) transparent ;
     background-repeat: no-repeat;
-    color: blue;
-    margin-left: 98px;
-    margin-top: 20px;
-    padding-left: 20px;
+    color: rgb(217, 5, 111);
     position: fixed;
+    min-width: 500px;
+    max-width: 500px;
+    min-height: 200px;
+    max-height: 600px;
+    border-radius: 60px;
+    border-color: #7113ec;
+    border-style: double;
+    text-align: center;
 }
 h6{
-    padding-left: 10px;
+    margin: 10px 10px;
+    color: rgb(217, 5, 111);
+    margin-left: 90px;
 }
-.eliminar img{
-    padding-bottom: ;
-    
+
+img{
+    width: 60px;
+    height: 50px;
+    position: fixed;
 }
+.gif img{
+  width: 400px;
+  height: 300px;
+  padding-left: 80px;
+  padding-inline-start: 50px;
+}
+
 .mensaje:focus {
     outline: none;
 }
 .botones {
     display: flex;
-    margin-top: 18px;
+    margin: 20px;
 }
 .btn-encriptar{
+    display: flex;
     background-color: firebrick;
     border: 1px solid firebrick;
     border-radius: 24px;
     color: white;
     cursor: pointer;
-    height: 50px;
+    height: 70px;
     width: 250px;
+    margin-left: 90px;
+
 
 }
+.bton-copiar{
+  padding-top: 30px;
+  padding-left: 30px;
+}
 .btn-desencriptar{
+    display: flex;
     background-color: firebrick;
     border: 1px solid firebrick;
     border-radius: 24px;
     color: white;
     cursor: pointer;
-    height: 50px;
+    height: 70px;
     width: 250px;
-    margin-left: 20px;
+    margin-left: 10px;
 }
+
 .copiar {
     background-color: firebrick;
     color: white;
     border: 1px solid firebrick;
     border-radius: 24px;
     cursor: pointer;
-    height: 50px;
-    margin-left: 165px;
+    height: 70px;
+    margin-left: 780px;
     margin-top: 420px;
     position: absolute;
     width: 250px;
+
 }
+.btn-encriptar:active {
+    -ss: #0005;
+    transition: none;
+}
+button {
+    --border: 3px;
+    --slant: 0.2em;
+    --color: #7113ec;
+    font-size: 35px;
+    padding: 0.4em 1.2em;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    color: var(--color);
+    background: 
+    linear-gradient(to bottom left,var(--color)  50%,#0000 50.1%) top right,
+    linear-gradient(to top   right,var(--color)  50%,#0000 50.1%) bottom left;
+    background-size: calc(var(--slant) + 1.3*var(--border)) calc(var(--slant) + 1.3*var(--border));
+    background-repeat: no-repeat;
+    box-shadow:
+      0 0 0 200px inset var(--s,#0000),
+      0 0 0 var(--border) inset var(--color);
+    clip-path: 
+        polygon(0 0, calc(100% - var(--slant)) 0, 100% var(--slant),
+                100% 100%, var(--slant) 100%,0 calc(100% - var(--slant))
+               );
+    transition: color var(--t,0.3s), background-size 0.3s;
+  }
+  button:focus-visible {
+    outline-offset: calc(-1*var(--border));
+    outline: var(--border) solid #000c;
+    clip-path: none;
+    background-size: 0 0;
+  }
+  button:hover,
+  button:active{
+    background-size: 100% 100%;
+    color: #fff;
+    --t: 0.2s 0.1s;
+  }
+  button:active {
+    --s: #0005;
+    transition: none;
+  }
+  .redes {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+  }
+  #github,
+  #facebook {
+    font-size: 3em;
+    background-color: #18191f;
+    color: #fff;
+    box-shadow: 2px 2px 2px #00000080, 10px 1px 12px #00000080,
+      2px 2px 10px #00000080, 2px 2px 3px #00000080, inset 2px 2px 10px #00000080,
+      inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080,
+      inset 2px 2px 10px #00000080;
+    border-radius: 29px;
+    padding: 11px 19px;
+    margin: 0 40px;
+    animation: animate 3s linear infinite;
+    text-shadow: 0 0 50px #ff00b3, 0 0 100px #ff0909, 0 0 150px #05c7e0,
+      0 0 200px #0fe7b1;
+  }
+
+  #facebook {
+    animation-delay: 0.7s;
+  }
+  #github {
+    animation-delay: 0.1s;
+  }
+  
+  @keyframes animate {
+    from {
+      filter: hue-rotate(0deg);
+    }
+    to {
+      filter: hue-rotate(360deg);
+    }
+  }
+.redes{
+
+    margin: 2px 2px;
+    display: flex;
+
+  }
